added discernible texts to the links

--- a/index.html
+++ b/index.html
@@ -77,31 +77,36 @@
       <h3 class="projects-title">My Work</h3>
       <p>These are some of the projects I've worked on, click on them to explore.
         You can also check out more of my work on
-        <a class="accent-link" href="https://codepen.io/NatalieSM/pens/public"
-          target="_blank"><strong>Codepen</strong></a>
-        and <a class="accent-link" href="https://github.com/NSM722" target="_blank"><strong>Github</strong></a>
+        <a class="accent-link" href="https://codepen.io/NatalieSM/pens/public" target="_blank"
+          aria-label="Link to my Codepen profile"><strong>Codepen</strong></a>
+        and <a class="accent-link" href="https://github.com/NSM722" target="_blank"
+          aria-label="Link to my Github profile"><strong>Github</strong></a>
       </p>
       <div class="images-container">
         <div class="image-div">
-          <a class="project-link" href="https://nsm722.github.io/Unit-Converter/" target="_blank">
+          <a class="project-link" href="https://nsm722.github.io/Unit-Converter/" target="_blank"
+            aria-label="Link to my Unit-Converter project">
             <img class="project-img" src="images/converter.png" alt="unit/metric converter">
             <div class="project-description">Unit converter</div>
           </a>
         </div>
         <div class="image-div">
-          <a class="project-link" href="https://nsm-flask-app.herokuapp.com/" target="_blank">
+          <a class="project-link" href="https://nsm-flask-app.herokuapp.com/" target="_blank"
+            aria-label="Link to my Language exchange app project">
             <img class="project-img" src="images/linguaphiles.png" alt="Language app login page">
             <div class="project-description">Flask App</div>
           </a>
         </div>
         <div class="image-div">
-          <a class="project-link" href="https://github.com/NSM722/BikEEE" target="_blank">
+          <a class="project-link" href="https://phenomenal-parfait-a0e90c.netlify.app/" target="_blank"
+            aria-label="Link to Bikee react app project website">
             <img class="project-img" src="images/bikeee.png" alt="React Web app home page">
             <div class="project-description">React App</div>
           </a>
         </div>
         <div class="image-div">
-          <a class="project-link" href="https://nsm722.github.io/Home.html" target="_blank">
+          <a class="project-link" href="https://nsm722.github.io/Home.html" target="_blank"
+            aria-label="Link to my Coffee Shop Website project">
             <img class="project-img" src="images/coffee_shop.png" alt="coffee shop homepage">
             <div class="project-description">Coffee Shop Website</div>
           </a>
@@ -113,10 +118,14 @@
   <!-- Footer and Social Media links-->
   <footer id="footer">
     <div class="footer-icons">
-      <a href="https://www.linkedin.com/in/natalie-mbatha/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="https://codepen.io/NatalieSM/pens/public" target="_blank"><i class="fa-brands fa-codepen"></i></a>
-      <a href="https://github.com/NSM722" target="_blank"><i class="fa-brands fa-github"></i></a>
-      <a href="mailto:nataliembatha@gmail.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/natalie-mbatha/" target="_blank"
+        aria-label="Link to Natalie Mbatha's Linkedin profile"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://codepen.io/NatalieSM/pens/public" target="_blank"
+        aria-label="Link to Natalie Mbatha's Codepen profile"><i class="fa-brands fa-codepen"></i></a>
+      <a href="https://github.com/NSM722" target="_blank" aria-label="Link to Natalie Mbatha's Github profile"><i
+          class="fa-brands fa-github"></i></a>
+      <a href="mailto:nataliembatha@gmail.com" target="_blank" aria-label="Link to Natalie Mbatha's email address"><i
+          class="fa-regular fa-envelope"></i></a>
     </div>
     <small>&copy; Created by NSM 2022</small>
   </footer>
