Styling and functionality for Hamburger menu

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <li class="nav-list-item"><a href="#projects">My Work</a></li>
         <li class="nav-list-item"><a href="#footer">Contact</a></li>
       </ul>
+      <!-- Hamburger Menu -->
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </nav>
   </header>
 
@@ -129,6 +135,7 @@
     </div>
     <small>&copy; Created by NSM 2022</small>
   </footer>
+  <script src="index.js"></script>
 </body>
 
 </html>
